--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 streamlit==1.31.0
 pandas==2.2.0
 plotly==5.18.0
-supabase==2.3.4
+supabase
 numpy==1.26.4
 polygon-api-client
 python-dotenv
-httpx==0.27.2
